--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -1,25 +1,16 @@
 source: site
 paths:
   uploads: uploads
-  dam_uploads: ''
   static: ''
-  dam_static: ''
-  collections: collections
-  data: _data
-  layouts: _layouts
-  includes: _includes
 collections_config:
   data:
     path: _data
-    output: false
-    icon:
+    disable_url: true
     disable_add: false
     disable_add_folder: false
     disable_file_actions: false
   posts:
     path: collections/_posts
-    output: true
-    icon:
     create:
       path: >-
         [relative_base_path]/{date|year}-{date|month}-{date|day}-{title|slugify}.[ext]
@@ -31,7 +22,6 @@ collections_config:
         path: site/schemas/post.md
   pages:
     path: collections/_pages
-    output: true
     icon: wysiwyg
     disable_add: false
     disable_add_folder: false
@@ -41,22 +31,7 @@ collections_config:
         path: site/schemas/page.html
   projects:
     path: collections/_projects
-    output: true
-    description: ''
     icon: work_outline
-    preview:
-      text:
-      subtext:
-        - key: subtitle
-      icon:
-      icon_color:
-      image:
-      metadata:
-      gallery:
-    _editables:
-    _inputs:
-    _select_data:
-    _structures:
     disable_add: false
     disable_add_folder: false
     disable_file_actions: false
@@ -65,8 +40,7 @@ collections_config:
         path: site/schemas/project.md
   testimonials:
     path: collections/_testimonials
-    output: false
-    description: ''
+    disable_url: false
     icon: format_quote
     sort:
       key: name
@@ -77,21 +51,8 @@ collections_config:
       - key: position
       - key: position
         order: desc
-    preview:
-      text:
-      subtext:
-        - key: position
-      icon:
-      icon_color:
-      image:
-      metadata:
-      gallery:
-    _editables:
     _enabled_editors:
       - data
-    _inputs:
-    _select_data:
-    _structures:
     disable_add: false
     disable_add_folder: false
     disable_file_actions: false
@@ -100,8 +61,6 @@ collections_config:
         path: site/schemas/testimonial.md
   drafts:
     path: collections/_drafts
-    output: true
-    icon:
     create:
       publish_to: posts
     disable_add: false
@@ -127,8 +86,29 @@ _inputs:
       allow_create: true
       empty_type: array
     cascade: true
-_structures:
-  content_blocks:
-    style: modal
-data_config: true
+  
 timezone: Etc/UTC
+
+_snippets:
+  image:
+    snippet: >-
+      {% include image.html [[arguments]] %}
+    params:
+      args:
+        parser: key_values
+        options:
+          models:
+            - editor_key: url
+            - editor_key: max-width
+            - editor_key: file
+            - editor_key: alt
+            - editor_key: caption
+          format:
+            string_boundary:
+              - '"'
+            root_value_delimiter: '='
+      _inputs:
+        max-width:
+          type: number
+        caption:
+          type: textarea
