--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -91,8 +91,7 @@ timezone: Etc/UTC
 
 _snippets:
   image:
-    snippet: >-
-      {% include image.html [[arguments]] %}
+    snippet: '{% include image.html [[arguments]] %}'
     params:
       args:
         parser: key_values
