Fix arguments args mismatch

--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -93,7 +93,7 @@ _snippets:
   image:
     snippet: '{% include image.html [[arguments]] %}'
     params:
-      args:
+      arguments:
         parser: key_values
         options:
           models:
