--- a/cloudcannon.config.yml
+++ b/cloudcannon.config.yml
@@ -17,6 +17,9 @@ collections_config:
     disable_add: false
     disable_add_folder: false
     disable_file_actions: false
+    _enabled_editors:
+      - visual
+      - content
     schemas:
       default:
         path: site/schemas/post.md
